--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -51,3 +51,7 @@ jobs:
     
     - name: Build
       run: go build -v main.go
+      
+    docker:
+      needs: build
+      uses: ./.github/worksflows/Docker.yml
